refactor: Scoped standard API keys by allowed certificates and teams
